// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.InputTag default 1`] = `
<div
  class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
>
  <div
    class="arco-input-tag-view"
  >
    <div
      class="arco-input-tag-inner"
    >
      <input
        autocomplete="off"
        class="arco-input-tag-input arco-input-tag-input-size-default arco-input-tag-input-autowidth"
        value=""
      />
      <span
        class="arco-input-tag-input-mirror"
      />
    </div>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.InputTag set className globally 1`] = `
<div
  class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder global-default-class"
>
  <div
    class="arco-input-tag-view"
  >
    <div
      class="arco-input-tag-inner"
    >
      <input
        autocomplete="off"
        class="arco-input-tag-input arco-input-tag-input-size-default arco-input-tag-input-autowidth"
        value=""
      />
      <span
        class="arco-input-tag-input-mirror"
      />
    </div>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.InputTag set className globally and component set className itself. 1`] = `
<div
  class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder component-class"
>
  <div
    class="arco-input-tag-view"
  >
    <div
      class="arco-input-tag-inner"
    >
      <input
        autocomplete="off"
        class="arco-input-tag-input arco-input-tag-input-size-default arco-input-tag-input-autowidth"
        value=""
      />
      <span
        class="arco-input-tag-input-mirror"
      />
    </div>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.InputTag set data-* property 1`] = `
<div
  class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
  data-test-name="InputTag"
>
  <div
    class="arco-input-tag-view"
  >
    <div
      class="arco-input-tag-inner"
    >
      <input
        autocomplete="off"
        class="arco-input-tag-input arco-input-tag-input-size-default arco-input-tag-input-autowidth"
        value=""
      />
      <span
        class="arco-input-tag-input-mirror"
      />
    </div>
  </div>
</div>
`;
